# raven-os-org

./: .dockerignore  .env  .env.example  .gitignore  .travis.yml  404.html  Cargo.toml  Dockerfile  README.md  Readme.md  Rocket.toml.example  apidoc.json  dockerfile  index.html  logo.html  travis.yml
api/: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml.example  apidoc.json
api/migrations/2018-03-30-015128_users/: up.sql
api/src/: config.rs  main.rs
api/src/db/: mod.rs  models.rs  schema.rs
api/src/routes/: mod.rs  user.rs
backend/: .env  .gitignore  Cargo.toml  README.md
backend/src/: lib.rs  main.rs
css/: cocoen.min.css  style.css  style404.css
front/: .gitignore  404.html  404.html.hbs  footer.html.hbs  header.html.hbs  index.html.hbs
front/css/: cocoen.min.css  style.css
img/: Thumbs.db
js/: main.js
migrations/2018-03-30-015128_users/: up.sql
migrations/2018-05-21-151707_rename_users/: down.sql  up.sql
src/: catchers.rs  config.rs  lib.rs  main.rs  models.rs  schema.rs
src/app/: mod.rs  newsletter.rs
src/db/: mod.rs  schema.rs
src/db/newsletter/: mod.rs  models.rs  schema.rs
src/routes/: error.rs  front.rs  frontend.rs  mod.rs  newsletter.rs  user.rs
static/css/: cocoen.min.css  style.css  style404.css  style_logo.css
static/js/: main.js
templates/: 404.html.hbs  index.html.hbs  logo.html.hbs
templates/includes/: footer.html.hbs  header.html.hbs
