[package]
name = "raven-os-org"
version = "0.1.0"
authors = ["Melvin PERSONNIER <melvin.personnier@gmail.com>", "Mickael BOURGOIS <mickael.bourgois@epitech.eu"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"
rocket = "0.4.0"
rocket_codegen = "0.4.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.38"
rand="0.6.5"
failure = "0.1.1"

[dependencies.uuid]
version = "0.6.3"
features = ["v4"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "handlebars_templates"]
